--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -223,3 +223,15 @@
     publisher = "Elsevier",
     url = "https://www.sciencedirect.com/science/article/pii/S0010945218301904"
 }
+
+@article{brodbeck2018over,
+    author = "Brodbeck, Christian and Presacco, Alessandro and Anderson, Samira and Simon, Jonathan Z",
+    title = "Over-representation of speech in older adults originates from early response in higher order auditory cortex",
+    journal = "Acta Acustica united with Acustica",
+    volume = "104",
+    number = "5",
+    pages = "774--777",
+    year = "2018",
+    publisher = "S. Hirzel Verlag",
+    url = "https://www.ingentaconnect.com/content/dav/aaua/2018/00000104/00000005/art00013"
+}
