--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -235,3 +235,14 @@
     publisher = "S. Hirzel Verlag",
     url = "https://www.ingentaconnect.com/content/dav/aaua/2018/00000104/00000005/art00013"
 }
+
+@article{HARTMANN2019116185,
+    author = "Thomas Hartmann and Nathan Weisz",
+    title = "Auditory cortical generators of the Frequency Following Response are modulated by intermodal attention",
+    journal = "NeuroImage",
+    volume = "203",
+    pages = "116185",
+    year = "2019",
+    publisher = "Elsevier",
+    doi = "10.1016/j.neuroimage.2019.116185",
+}
