--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -2,10 +2,12 @@
     author = {Zhang, Linmin and Pylkk{\"a}nen, Liina},
     title = "Composing lexical versus functional adjectives: Evidence for uniformity in the left temporal lobe",
     journal = "Psychonomic bulletin \& review",
-    pages = "1--14",
+    volume = "25",
+    number = "6",
+    pages = "2309--2322",
     year = "2018",
     publisher = "Springer",
-    url = "https://link.springer.com/content/pdf/10.3758/s13423-018-1469-y.pdf"
+    url = "https://link.springer.com/article/10.3758/s13423-018-1469-y"
 }
 
 @article{zhang2018semantic,
@@ -237,12 +239,22 @@
 }
 
 @article{HARTMANN2019116185,
-    author = "Thomas Hartmann and Nathan Weisz",
+    author = "Hartmann, Thomas and Weisz, Nathan",
     title = "Auditory cortical generators of the Frequency Following Response are modulated by intermodal attention",
     journal = "NeuroImage",
     volume = "203",
     pages = "116185",
     year = "2019",
     publisher = "Elsevier",
-    doi = "10.1016/j.neuroimage.2019.116185",
+    doi = "10.1016/j.neuroimage.2019.116185"
+}
+
+@article{verschueren2019effect,
+    author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
+    title = "The effect of stimulus choice on an {EEG}-based objective measure of speech intelligibility",
+    journal = "bioRxiv",
+    pages = "421727",
+    year = "2019",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/421727v2.full-text"
 }
