DOC:  update publications, sort by year

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -131,16 +131,6 @@
     url = "https://www.frontiersin.org/articles/10.3389/fpsyg.2015.01787"
 }
 
-@article{dirani2018lexical,
-    author = "Dirani, Julien and Pylkkanen, Liina",
-    title = "Lexical Access in Comprehension vs. Production: Spatiotemporal Localization of Semantic Facilitation and Interference",
-    journal = "bioRxiv",
-    pages = "449157",
-    year = "2018",
-    publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/early/2018/10/23/449157.1.abstract"
-}
-
 @article{brodbeck2018neural,
     author = "Brodbeck, Christian and Presacco, Alessandro and Simon, Jonathan Z",
     title = "Neural source dynamics of brain responses to continuous stimuli: speech processing from acoustics to comprehension",
@@ -182,16 +172,6 @@
     year = "2017",
     publisher = "Cold Spring Harbor Laboratory",
     url = "https://www.biorxiv.org/content/early/2017/12/04/229153.abstract"
-}
-
-@article{flick2018isolating,
-    author = {Flick, Graham and Pylkk{\"a}nen, Liina},
-    title = "Isolating syntax in natural language: {MEG} evidence for an early contribution of left posterior temporal cortex",
-    journal = "BioRxiv",
-    pages = "439158",
-    year = "2018",
-    publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/early/2018/10/09/439158.abstract"
 }
 
 @article{matchin2019temporal,
@@ -249,12 +229,191 @@
     doi = "10.1016/j.neuroimage.2019.116185"
 }
 
-@article{verschueren2019effect,
+@article{takahashi2021identifying,
+    author = "Takahashi, Yuta and Oseki, Yohei and Sakai, Hiromu and Makuuchi, Michiru and Osu, Rieko",
+    title = "Identifying Brain Regions Related to Word Prediction During Listening to Japanese Speech by Combining a LSTM Language Model and {MEG}",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2021.03.25.436887v1.abstract"
+}
+
+@article{marsh2020poststroke,
+    author = "Marsh, Elisabeth B and Brodbeck, Christian and Llinas, Rafael H and Mallick, Dania and Kulasingham, Joshua P and Simon, Jonathan Z and Llin{\'a}s, Rodolfo R",
+    title = "Poststroke acute dysexecutive syndrome, a disorder resulting from minor stroke due to disruption of network dynamics",
+    journal = "Proceedings of the National Academy of Sciences",
+    volume = "117",
+    number = "52",
+    pages = "33578--33585",
+    year = "2020",
+    publisher = "National Acad Sciences",
+    url = "https://www.pnas.org/content/117/52/33578.short"
+}
+
+@article{kulasingham2020high,
+    author = "Kulasingham, Joshua P and Brodbeck, Christian and Presacco, Alessandro and Kuchinsky, Stefanie E and Anderson, Samira and Simon, Jonathan Z",
+    title = "High gamma cortical processing of continuous speech in younger and older listeners",
+    journal = "Neuroimage",
+    volume = "222",
+    pages = "117291",
+    year = "2020",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S1053811920307771"
+}
+
+@article{kim2021conceptual,
+    author = {Kim, Songhee and Pylkk{\"a}nen, Liina},
+    title = "How the conceptual specificity of individual words affects incremental sentence composition: {MEG} evidence",
+    journal = "Brain and Language",
+    volume = "218",
+    pages = "104951",
+    year = "2021",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0093934X21000456"
+}
+
+@article{li2021disentangling,
+    author = {Li, Jixing and Pylkk{\"a}nen, Liina},
+    title = "Disentangling semantic composition and semantic association in the left temporal lobe",
+    journal = "Journal of Neuroscience",
+    year = "2021",
+    publisher = "Soc Neuroscience",
+    url = "https://www.jneurosci.org/content/early/2021/06/15/JNEUROSCI.2317-20.2021.abstract"
+}
+
+@article{matar2019left,
+    author = {Matar, Suhail and Pylkk{\"a}nen, Liina and Marantz, Alec},
+    title = "Left occipital and right frontal involvement in syntactic category prediction: {MEG} evidence from Standard Arabic",
+    journal = "Neuropsychologia",
+    volume = "135",
+    pages = "107230",
+    year = "2019",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S002839321930274X"
+}
+
+@article{gillis2021hearing_2,
+    author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom and Gillis, Marlies and Francart, Tom",
+    title = "Hearing loss is associated with delayed neural responses to continuous speech Abbreviated title: Hearing loss delays neural responses to speech: KU Leuven",
+    journal = "bioRxiv",
+    volume = "3000",
+    year = "2021",
+    url = "https://www.biorxiv.org/content/10.1101/2021.01.21.427550v2.abstract"
+}
+
+@article{verschueren2021effect,
+    author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
+    title = "The effect of stimulus intensity on neural envelope tracking",
+    journal = "Hearing Research",
+    volume = "403",
+    pages = "108175",
+    year = "2021",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0378595521000095"
+}
+
+@article{dong2020size,
+    author = "Dong, Xuemeng and Wu, Zehao and Li, Xiuping and Xiao, Liyan and Yang, Man and Li, Yang and Duan, Junchao and Sun, Zhiwei",
+    title = "The size-dependent cytotoxicity of amorphous silica nanoparticles: a systematic review of in vitro studies",
+    journal = "International Journal of Nanomedicine",
+    volume = "15",
+    pages = "9089",
+    year = "2020",
+    publisher = "Dove Press",
+    url = "https://www.ncbi.nlm.nih.gov/pmc/articles/pmc7683827/"
+}
+
+@article{law2021lists,
+    author = {Law, Ryan and Pylkk{\"a}nen, Liina},
+    title = "Lists with and without syntax: A new approach to measuring the neural processing of syntax",
+    journal = "Journal of Neuroscience",
+    volume = "41",
+    number = "10",
+    pages = "2186--2196",
+    year = "2021",
+    publisher = "Soc Neuroscience",
+    url = "https://www.jneurosci.org/content/41/10/2186.abstract"
+}
+
+@article{gillis2021neural,
+    author = "Gillis, Marlies and Vanthornhout, Jonas and Simon, Jonathan Z and Francart, Tom and Brodbeck, Christian",
+    title = "Neural markers of speech comprehension: measuring {EEG} tracking of linguistic speech representations, controlling the speech acoustics",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2021.03.24.436758v1.abstract"
+}
+
+@article{verschueren2020effect,
     author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
     title = "The effect of stimulus choice on an {EEG}-based objective measure of speech intelligibility",
+    journal = "Ear and hearing",
+    volume = "41",
+    number = "6",
+    pages = "1586--1597",
+    year = "2020",
+    publisher = "LWW",
+    url = "https://journals.lww.com/ear-hearing/fulltext/2020/11000/the\\_effect\\_of\\_stimulus\\_choice\\_on\\_an\\_eeg\\_based.16.aspx"
+}
+
+@article{dirani2018lexical_a,
+    author = {Dirani, Julien and Pylkk{\"a}nen, Liina},
+    title = "Lexical Access in Comprehension vs. Production: Spatiotemporal Localization of Semantic Facilitation and Interference",
     journal = "bioRxiv",
-    pages = "421727",
-    year = "2019",
+    pages = "449157",
+    year = "2018",
     publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/10.1101/421727v2.full-text"
+    url = "https://www.biorxiv.org/content/10.1101/449157v2.abstract"
+}
+
+@article{tulling2021neural,
+    author = {Tulling, Maxime and Law, Ryan and Cournane, Ail{\'\i}s and Pylkk{\"a}nen, Liina},
+    title = "Neural correlates of modal displacement and discourse-updating under (un) certainty",
+    journal = "Eneuro",
+    volume = "8",
+    number = "1",
+    year = "2021",
+    publisher = "Society for Neuroscience",
+    url = "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7810261/"
+}
+
+@article{brodbeck2020neural,
+    author = "Brodbeck, Christian and Jiao, Alex and Hong, L Elliot and Simon, Jonathan Z",
+    title = "Neural speech restoration at the cocktail party: Auditory cortex recovers masked speech of both attended and ignored speakers",
+    journal = "PLoS biology",
+    volume = "18",
+    number = "10",
+    pages = "e3000883",
+    year = "2020",
+    publisher = "Public Library of Science San Francisco, CA USA",
+    url = "https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000883"
+}
+
+@article{flick2020isolating,
+    author = {Flick, Graham and Pylkk{\"a}nen, Liina},
+    title = "Isolating syntax in natural language: {MEG} evidence for an early contribution of left posterior temporal cortex",
+    journal = "Cortex",
+    volume = "127",
+    pages = "42--57",
+    year = "2020",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0010945220300502"
+}
+
+@article{li2020modeling,
+    author = {Li, Jixing and Luh, Wen-Ming and Pylkk{\"a}nen, Liina and Yang, Yiming and Hale, John},
+    title = "Modeling pronoun resolution in the brain",
+    journal = "bioRxiv",
+    year = "2020",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2020.11.24.396598v1.abstract"
+}
+
+@article{kulasingham2021cortical,
+    author = "Kulasingham, Joshua P and Joshi, Neha H and Rezaeizadeh, Mohsen and Simon, Jonathan Z",
+    title = "Cortical Processing of Arithmetic and Simple Sentences in an Auditory Attention Task",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2021.01.31.429030v3.abstract"
 }
