--- a/doc/scripts/cache.bib
+++ b/doc/scripts/cache.bib
@@ -1,37 +1,25 @@
 @article{vo2014cytotoxicity,
     author = "Vo, Nguyen TK and Bufalino, Mary R and Hartlen, Kurtis D and Kitaev, Vladimir and Lee, Lucy EJ",
     title = "Cytotoxicity evaluation of silica nanoparticles using fish cell lines",
-    journal = "In Vitro Cellular \\& Developmental Biology-Animal",
+    journal = "In Vitro Cellular \& Developmental Biology-Animal",
     volume = "50",
     number = "5",
     pages = "427--438",
     year = "2014",
     publisher = "Springer",
-    url = "https://link.springer.com/article/10.1007/s11626-013-9720-3"
+    url = "https://link.springer.com/content/pdf/10.1007/s11626-013-9720-3.pdf"
 }
 
 @article{zhang2018composing,
     author = {Zhang, Linmin and Pylkk{\"a}nen, Liina},
     title = "Composing lexical versus functional adjectives: Evidence for uniformity in the left temporal lobe",
-    journal = "Psychonomic bulletin \\& review",
+    journal = "Psychonomic bulletin \& review",
     volume = "25",
     number = "6",
     pages = "2309--2322",
     year = "2018",
     publisher = "Springer",
     url = "https://link.springer.com/article/10.3758/s13423-018-1469-y"
-}
-
-@article{blanco2017bilingual,
-    author = {Blanco-Elorrieta, Esti and Pylkk{\"a}nen, Liina},
-    title = "Bilingual language switching in the laboratory versus in the wild: The spatiotemporal dynamics of adaptive language control",
-    journal = "Journal of Neuroscience",
-    volume = "37",
-    number = "37",
-    pages = "9022--9036",
-    year = "2017",
-    publisher = "Soc Neuroscience",
-    url = "http://www.jneurosci.org/content/37/37/9022.abstract"
 }
 
 @article{brodbeck2018rapid,
@@ -46,26 +34,25 @@
     url = "https://www.sciencedirect.com/science/article/pii/S096098221831409X"
 }
 
-@article{brooks2015evidence,
-    author = "Brooks, Teon L and Cid de Garcia, Daniela",
-    title = "Evidence for morphological composition in compound words using MEG",
-    journal = "Frontiers in human neuroscience",
-    volume = "9",
-    pages = "215",
-    year = "2015",
-    publisher = "Frontiers",
-    url = "https://www.frontiersin.org/articles/10.3389/fnhum.2015.00215"
+@article{takahashi2021identifying,
+    author = "Takahashi, Yuta and Oseki, Yohei and Sakai, Hiromu and Makuuchi, Michiru and Osu, Rieko",
+    title = "Identifying Brain Regions Related to Word Prediction During Listening to Japanese Speech by Combining a LSTM Language Model and MEG",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2021.03.25.436887v1.abstract"
 }
 
-@article{brodbeck2017language,
-    author = {Brodbeck, Christian and Pylkk{\"a}nen, Liina},
-    title = "Language in context: Characterizing the comprehension of referential expressions with MEG",
-    journal = "Neuroimage",
-    volume = "147",
-    pages = "447--460",
+@article{blanco2017bilingual,
+    author = {Blanco-Elorrieta, Esti and Pylkk{\"a}nen, Liina},
+    title = "Bilingual language switching in the laboratory versus in the wild: The spatiotemporal dynamics of adaptive language control",
+    journal = "Journal of Neuroscience",
+    volume = "37",
+    number = "37",
+    pages = "9022--9036",
     year = "2017",
-    publisher = "Elsevier",
-    url = "https://www.sciencedirect.com/science/article/pii/S1053811916307169"
+    publisher = "Soc Neuroscience",
+    url = "https://www.jneurosci.org/content/37/37/9022.abstract"
 }
 
 @article{zhang2018semantic,
@@ -79,6 +66,40 @@
     url = "https://www.sciencedirect.com/science/article/pii/S0028393218305037"
 }
 
+@article{brodbeck2017language,
+    author = {Brodbeck, Christian and Pylkk{\"a}nen, Liina},
+    title = "Language in context: Characterizing the comprehension of referential expressions with MEG",
+    journal = "Neuroimage",
+    volume = "147",
+    pages = "447--460",
+    year = "2017",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S1053811916307169"
+}
+
+@article{brooks2015evidence,
+    author = "Brooks, Teon L and Cid de Garcia, Daniela",
+    title = "Evidence for morphological composition in compound words using MEG",
+    journal = "Frontiers in human neuroscience",
+    volume = "9",
+    pages = "215",
+    year = "2015",
+    publisher = "Frontiers",
+    url = "https://www.frontiersin.org/articles/10.3389/fnhum.2015.00215/full"
+}
+
+@article{marsh2020poststroke,
+    author = "Marsh, Elisabeth B and Brodbeck, Christian and Llinas, Rafael H and Mallick, Dania and Kulasingham, Joshua P and Simon, Jonathan Z and Llin{\'a}s, Rodolfo R",
+    title = "Poststroke acute dysexecutive syndrome, a disorder resulting from minor stroke due to disruption of network dynamics",
+    journal = "Proceedings of the National Academy of Sciences",
+    volume = "117",
+    number = "52",
+    pages = "33578--33585",
+    year = "2020",
+    publisher = "National Acad Sciences",
+    url = "https://www.pnas.org/content/117/52/33578.short"
+}
+
 @article{brodbeck2018transformation,
     author = "Brodbeck, Christian and Hong, L Elliot and Simon, Jonathan Z",
     title = "Transformation from auditory to linguistic representations across auditory cortex is rapid and attention dependent for continuous speech",
@@ -87,29 +108,6 @@
     year = "2018",
     publisher = "Cold Spring Harbor Laboratory",
     url = "https://www.biorxiv.org/content/10.1101/326785v2.abstract"
-}
-
-@article{brodbeck2018neural,
-    author = "Brodbeck, Christian and Presacco, Alessandro and Simon, Jonathan Z",
-    title = "Neural source dynamics of brain responses to continuous stimuli: Speech processing from acoustics to comprehension",
-    journal = "NeuroImage",
-    volume = "172",
-    pages = "162--174",
-    year = "2018",
-    publisher = "Elsevier",
-    url = "https://www.sciencedirect.com/science/article/pii/S1053811918300429"
-}
-
-@article{sharpe2019automatic,
-    author = {Sharpe, Victoria and Reddigari, Samir and Pylkk{\"a}nen, Liina and Marantz, Alec},
-    title = "Automatic access to verb continuations on the lexical and categorical levels: evidence from MEG",
-    journal = "Language, Cognition and Neuroscience",
-    volume = "34",
-    number = "2",
-    pages = "137--150",
-    year = "2019",
-    publisher = "Taylor \\& Francis",
-    url = "https://www.tandfonline.com/doi/abs/10.1080/23273798.2018.1531139"
 }
 
 @article{williams2017early,
@@ -123,6 +121,18 @@
     url = "https://www.sciencedirect.com/science/article/pii/S0028393217301586"
 }
 
+@article{sharpe2019automatic,
+    author = {Sharpe, Victoria and Reddigari, Samir and Pylkk{\"a}nen, Liina and Marantz, Alec},
+    title = "Automatic access to verb continuations on the lexical and categorical levels: evidence from MEG",
+    journal = "Language, Cognition and Neuroscience",
+    volume = "34",
+    number = "2",
+    pages = "137--150",
+    year = "2019",
+    publisher = "Taylor \& Francis",
+    url = "https://www.tandfonline.com/doi/abs/10.1080/23273798.2018.1531139"
+}
+
 @article{gwilliams2016functional,
     author = "Gwilliams, Laura and Lewis, GA and Marantz, Alec",
     title = "Functional characterisation of letter-specific responses in time, space and current polarity using magnetoencephalography",
@@ -132,6 +142,68 @@
     year = "2016",
     publisher = "Elsevier",
     url = "https://www.sciencedirect.com/science/article/pii/S105381191600166X"
+}
+
+@article{kulasingham2020high,
+    author = "Kulasingham, Joshua P and Brodbeck, Christian and Presacco, Alessandro and Kuchinsky, Stefanie E and Anderson, Samira and Simon, Jonathan Z",
+    title = "High gamma cortical processing of continuous speech in younger and older listeners",
+    journal = "Neuroimage",
+    volume = "222",
+    pages = "117291",
+    year = "2020",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S1053811920307771"
+}
+
+@article{kim2021conceptual,
+    author = {Kim, Songhee and Pylkk{\"a}nen, Liina},
+    title = "How the conceptual specificity of individual words affects incremental sentence composition: MEG evidence",
+    journal = "Brain and Language",
+    volume = "218",
+    pages = "104951",
+    year = "2021",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0093934X21000456"
+}
+
+@article{hartmann2019auditory,
+    author = "Hartmann, Thomas and Weisz, Nathan",
+    title = "Auditory cortical generators of the Frequency Following Response are modulated by intermodal attention",
+    journal = "Neuroimage",
+    volume = "203",
+    pages = "116185",
+    year = "2019",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S1053811919307761"
+}
+
+@article{li2021disentangling,
+    author = {Li, Jixing and Pylkk{\"a}nen, Liina},
+    title = "Disentangling semantic composition and semantic association in the left temporal lobe",
+    journal = "Journal of Neuroscience",
+    year = "2021",
+    publisher = "Soc Neuroscience",
+    url = "https://www.jneurosci.org/content/early/2021/06/15/JNEUROSCI.2317-20.2021.abstract"
+}
+
+@article{matar2019left,
+    author = {Matar, Suhail and Pylkk{\"a}nen, Liina and Marantz, Alec},
+    title = "Left occipital and right frontal involvement in syntactic category prediction: MEG evidence from Standard Arabic",
+    journal = "Neuropsychologia",
+    volume = "135",
+    pages = "107230",
+    year = "2019",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S002839321930274X"
+}
+
+@article{gillis2021hearing,
+    author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom",
+    title = "Hearing loss is associated with delayed neural responses to continuous speech",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2021.01.21.427550v1.abstract"
 }
 
 @article{gwilliams2018morphological,
@@ -145,63 +217,24 @@
     url = "https://www.sciencedirect.com/science/article/pii/S0028393218301568"
 }
 
-@article{brodbeck2015eeg,
-    author = {Brodbeck, Christian and Gwilliams, Laura and Pylkk{\"a}nen, Liina},
-    title = "EEG can track the time course of successful reference resolution in small visual worlds",
-    journal = "Frontiers in psychology",
-    volume = "6",
-    pages = "1787",
-    year = "2015",
-    publisher = "Frontiers",
-    url = "https://www.frontiersin.org/articles/10.3389/fpsyg.2015.01787"
+@article{gillis2021hearing_2,
+    author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom and Gillis, Marlies and Francart, Tom",
+    title = "Hearing loss is associated with delayed neural responses to continuous speech Abbreviated title: Hearing loss delays neural responses to speech: KU Leuven",
+    journal = "Department of Neurosciences, ExpORL",
+    volume = "3000",
+    year = "2021",
+    url = "https://www.biorxiv.org/content/10.1101/2021.01.21.427550v2.full.pdf"
 }
 
-@article{takeilnatriureticpeptideisolatedfromeelbrain,
-    author = "Takeil, Y and Takahashi, A and Watanabe, TX and Nakajirna, K and Sakakibara, S",
-    title = "A NATRIURETICPEPTIDEISOLATEDFROMEELBRAIN",
-    url = "https://www.researchgate.net/profile/Takushi\_Watanabe/publication/21013413\_Amino\_acid\_sequence\_and\_relative\_biological\_activity\_of\_a\_natriuretic\_peptide\_isolated\_from\_eel\_brain/links/5ab9f69eaca2722b97d182de/Amino-acid-sequence-and-relative-biological-activity-of-a-natriuretic-peptide-isolated-from-eel-brain.pdf"
-}
-
-@article{gaston2018time,
-    author = "Gaston, Phoebe and Marantz, Alec",
-    title = "The time course of contextual cohort effects in auditory processing of category-ambiguous words: MEG evidence for a single “clash” as noun or verb",
-    journal = "Language, Cognition and Neuroscience",
-    volume = "33",
-    number = "4",
-    pages = "402--423",
+@article{brodbeck2018neural,
+    author = "Brodbeck, Christian and Presacco, Alessandro and Simon, Jonathan Z",
+    title = "Neural source dynamics of brain responses to continuous stimuli: Speech processing from acoustics to comprehension",
+    journal = "NeuroImage",
+    volume = "172",
+    pages = "162--174",
     year = "2018",
-    publisher = "Taylor \\& Francis",
-    url = "https://www.tandfonline.com/doi/abs/10.1080/23273798.2017.1395466"
-}
-
-@article{hartmann2019auditory,
-    author = "Hartmann, Thomas and Weisz, Nathan",
-    title = "Auditory cortical generators of the Frequency Following Response are modulated by intermodal attention",
-    journal = "bioRxiv",
-    pages = "633834",
-    year = "2019",
-    publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/10.1101/633834v1.abstract"
-}
-
-@article{dirani2018lexical,
-    author = "Dirani, Julien and Pylkkanen, Liina",
-    title = "Lexical Access in Comprehension vs. Production: Spatiotemporal Localization of Semantic Facilitation and Interference",
-    journal = "bioRxiv",
-    pages = "449157",
-    year = "2018",
-    publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/early/2018/10/23/449157.1.abstract"
-}
-
-@article{verschueren2019effect,
-    author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
-    title = "The effect of stimulus choice on an EEG-based objective measure of speech intelligibility",
-    journal = "bioRxiv",
-    pages = "421727",
-    year = "2019",
-    publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/10.1101/421727v2.full-text"
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S1053811918300429"
 }
 
 @article{brodbeck2018over,
@@ -216,10 +249,154 @@
     url = "https://www.ingentaconnect.com/content/dav/aaua/2018/00000104/00000005/art00013"
 }
 
+@article{verschueren2021effect,
+    author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
+    title = "The effect of stimulus intensity on neural envelope tracking",
+    journal = "Hearing Research",
+    volume = "403",
+    pages = "108175",
+    year = "2021",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0378595521000095"
+}
+
+@article{dong2020size,
+    author = "Dong, Xuemeng and Wu, Zehao and Li, Xiuping and Xiao, Liyan and Yang, Man and Li, Yang and Duan, Junchao and Sun, Zhiwei",
+    title = "The size-dependent cytotoxicity of amorphous silica nanoparticles: a systematic review of in vitro studies",
+    journal = "International Journal of Nanomedicine",
+    volume = "15",
+    pages = "9089",
+    year = "2020",
+    publisher = "Dove Press",
+    url = "https://www.ncbi.nlm.nih.gov/pmc/articles/pmc7683827/"
+}
+
+@article{law2021lists,
+    author = {Law, Ryan and Pylkk{\"a}nen, Liina},
+    title = "Lists with and without syntax: A new approach to measuring the neural processing of syntax",
+    journal = "Journal of Neuroscience",
+    volume = "41",
+    number = "10",
+    pages = "2186--2196",
+    year = "2021",
+    publisher = "Soc Neuroscience",
+    url = "https://www.jneurosci.org/content/41/10/2186.abstract"
+}
+
+@article{gaston2018time,
+    author = "Gaston, Phoebe and Marantz, Alec",
+    title = "The time course of contextual cohort effects in auditory processing of category-ambiguous words: MEG evidence for a single “clash” as noun or verb",
+    journal = "Language, Cognition and Neuroscience",
+    volume = "33",
+    number = "4",
+    pages = "402--423",
+    year = "2018",
+    publisher = "Taylor \& Francis",
+    url = "https://www.tandfonline.com/doi/abs/10.1080/23273798.2017.1395466"
+}
+
+@article{brodbeck2015eeg,
+    author = {Brodbeck, Christian and Gwilliams, Laura and Pylkk{\"a}nen, Liina},
+    title = "EEG can track the time course of successful reference resolution in small visual worlds",
+    journal = "Frontiers in psychology",
+    volume = "6",
+    pages = "1787",
+    year = "2015",
+    publisher = "Frontiers",
+    url = "https://www.frontiersin.org/articles/10.3389/fpsyg.2015.01787/full"
+}
+
+@article{lidisentangling,
+    author = {Li, Jixing and Island, Saadiyat and Dhabi, Abu and Pylkk{\"a}nen, Liina},
+    title = "Disentangling semantic composition and semantic association in the left temporal lobe Abbreviated title: Semantic composition versus association",
+    url = "https://www.biorxiv.org/content/10.1101/2020.08.17.254482v3.full.pdf"
+}
+
+@article{gillis2021neural,
+    author = "Gillis, Marlies and Vanthornhout, Jonas and Simon, Jonathan Z and Francart, Tom and Brodbeck, Christian",
+    title = "Neural markers of speech comprehension: measuring EEG tracking of linguistic speech representations, controlling the speech acoustics",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2021.03.24.436758v1.abstract"
+}
+
+@article{takeilnatriureticpeptideisolatedfromeelbrain,
+    author = "Takeil, Y and Takahashi, A and Watanabe, TX and Nakajirna, K and Sakakibara, S",
+    title = "A NATRIURETICPEPTIDEISOLATEDFROMEELBRAIN",
+    url = "https://www.researchgate.net/profile/Takushi-Watanabe/publication/21013413\_Amino\_acid\_sequence\_and\_relative\_biological\_activity\_of\_a\_natriuretic\_peptide\_isolated\_from\_eel\_brain/links/5ab9f69eaca2722b97d182de/Amino-acid-sequence-and-relative-biological-activity-of-a-natriuretic-peptide-isolated-from-eel-brain.pdf"
+}
+
+@article{verschueren2020effect,
+    author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
+    title = "The effect of stimulus choice on an EEG-based objective measure of speech intelligibility",
+    journal = "Ear and hearing",
+    volume = "41",
+    number = "6",
+    pages = "1586--1597",
+    year = "2020",
+    publisher = "LWW",
+    url = "https://journals.lww.com/ear-hearing/fulltext/2020/11000/the\_effect\_of\_stimulus\_choice\_on\_an\_eeg\_based.16.aspx"
+}
+
+@article{dirani2018lexical,
+    author = {Dirani, Julien and Pylkk{\"a}nen, Liina},
+    title = "Lexical Access in Comprehension vs. Production: Spatiotemporal Localization of Semantic Facilitation and Interference",
+    journal = "bioRxiv",
+    pages = "449157",
+    year = "2018",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/449157v2.abstract"
+}
+
+@incollection{katsumiti2019vitro,
+    author = "Katsumiti, Alberto and Cajaraville, Miren P",
+    title = "In Vitro Testing: In Vitro Toxicity Testing with Bivalve Mollusc and Fish Cells for the Risk Assessment of Nanoparticles in the Aquatic Environment",
+    booktitle = "Ecotoxicology of Nanoparticles in Aquatic Systems",
+    pages = "62--98",
+    year = "2019",
+    publisher = "CRC Press",
+    url = "https://www.taylorfrancis.com/chapters/edit/10.1201/9781315158761-3/vitro-testing-alberto-katsumiti-miren-cajaraville"
+}
+
+@article{tulling2021neural,
+    author = {Tulling, Maxime and Law, Ryan and Cournane, Ail{\'\i}s and Pylkk{\"a}nen, Liina},
+    title = "Neural correlates of modal displacement and discourse-updating under (un) certainty",
+    journal = "Eneuro",
+    volume = "8",
+    number = "1",
+    year = "2021",
+    publisher = "Society for Neuroscience",
+    url = "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7810261/"
+}
+
+@article{brodbeck2020neural,
+    author = "Brodbeck, Christian and Jiao, Alex and Hong, L Elliot and Simon, Jonathan Z",
+    title = "Neural speech restoration at the cocktail party: Auditory cortex recovers masked speech of both attended and ignored speakers",
+    journal = "PLoS biology",
+    volume = "18",
+    number = "10",
+    pages = "e3000883",
+    year = "2020",
+    publisher = "Public Library of Science San Francisco, CA USA",
+    url = "https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000883"
+}
+
+@article{flick2020isolating,
+    author = {Flick, Graham and Pylkk{\"a}nen, Liina},
+    title = "Isolating syntax in natural language: MEG evidence for an early contribution of left posterior temporal cortex",
+    journal = "Cortex",
+    volume = "127",
+    pages = "42--57",
+    year = "2020",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0010945220300502"
+}
+
 @article{brodbeck2016language,
     author = {Brodbeck, Christian and Gwilliams, Laura and Pylkk{\"a}nen, Liina},
     title = "Language in context: MEG evidence for modality-general and-specific responses to reference resolution",
-    journal = "eNeuro",
+    journal = "Eneuro",
     volume = "3",
     number = "6",
     year = "2016",
@@ -227,21 +404,60 @@
     url = "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5200920/"
 }
 
-@article{verschueren2018semantic,
-    author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
-    title = "Semantic context enhances neural envelope tracking",
+@article{li2020modeling,
+    author = {Li, Jixing and Luh, Wen-Ming and Pylkk{\"a}nen, Liina and Yang, Yiming and Hale, John},
+    title = "Modeling pronoun resolution in the brain",
     journal = "bioRxiv",
-    pages = "421727",
-    year = "2018",
+    year = "2020",
     publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/10.1101/421727v1.abstract"
+    url = "https://www.biorxiv.org/content/10.1101/2020.11.24.396598v1.full-text"
+}
+
+@phdthesis{blanco2020towards,
+    author = "Blanco-Elorrieta, Esti",
+    title = "Towards an ecologically valid neurobiology of bilingualism",
+    year = "2020",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/f79d3946e65b72be4d17924229661815/1?pq-origsite=gscholar\&cbl=18750\&diss=y"
+}
+
+@article{kulasingham2021cortical,
+    author = "Kulasingham, Joshua P and Joshi, Neha H and Rezaeizadeh, Mohsen and Simon, Jonathan Z",
+    title = "Cortical Processing of Arithmetic and Simple Sentences in an Auditory Attention Task",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    url = "https://www.biorxiv.org/content/10.1101/2021.01.31.429030v3.abstract"
 }
 
 @phdthesis{pifer2019investigation,
-    author = "Pifer, Madeline R",
-    title = "AN INVESTIGATION OF NEURAL MECHANISMS UNDERLYING VERB MORPHOLOGY DEFICITS IN APHASIA",
+    author = "Pifer, Madeline",
+    title = "An Investigation of Neural Mechanisms Underlying Verb Morphology Deficits in Aphasia",
     year = "2019",
-    url = "https://drum.lib.umd.edu/handle/1903/22221"
+    school = "University of Maryland, College Park",
+    url = "https://search.proquest.com/openview/1f2ef0a91eef05c8bab98ad8d5551e7f/1?pq-origsite=gscholar\&cbl=18750\&diss=y"
+}
+
+@article{flick2018building,
+    author = {Flick, Graham and Oseki, Yohei and Kaczmarek, Amanda R and Al Kaabi, Meera and Marantz, Alec and Pylkk{\"a}nen, Liina},
+    title = "Building words and phrases in the left temporal lobe",
+    journal = "Cortex",
+    volume = "106",
+    pages = "213--236",
+    year = "2018",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0010945218301904"
+}
+
+@article{neophytou2018syntactic,
+    author = "Neophytou, Kyriaki and Manouilidou, Christina and Stockall, Linnaea and Marantz, Alec",
+    title = "Syntactic and semantic restrictions on morphological recomposition: MEG evidence from Greek",
+    journal = "Brain and language",
+    volume = "183",
+    pages = "11--20",
+    year = "2018",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0093934X1730130X"
 }
 
 @phdthesis{williams2018representing,
@@ -249,45 +465,5 @@
     title = "Representing Relationality: MEG Studies on Argument Structure",
     year = "2018",
     school = "New York University",
-    url = "http://search.proquest.com/openview/3eac63204ea3455c96e64a21bd0d5d94/1?pq-origsite=gscholar\&cbl=18750\&diss=y"
-}
-
-@article{flick2018isolating,
-    author = {Flick, Graham and Pylkk{\"a}nen, Liina},
-    title = "Isolating syntax in natural language: MEG evidence for an early contribution of left posterior temporal cortex",
-    journal = "BioRxiv",
-    pages = "439158",
-    year = "2018",
-    publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/10.1101/439158v1.abstract"
-}
-
-@phdthesis{zhang2016composing,
-    author = "Zhang, Linmin",
-    title = "Composing conceptual and logical information: Semantic processing in left anterior temporal cortex",
-    year = "2016",
-    school = "New York University",
-    url = "http://search.proquest.com/openview/913f5f104900afba2a426f42998ae54e/1?pq-origsite=gscholar\&cbl=18750\&diss=y"
-}
-
-@article{puvvada2017neural,
-    author = "Puvvada, Krishna C and Villafane-Delgado, Marisel and Brodbeck, Christian and Simon, Jonathan Z",
-    title = "Neural Coding of Noisy and Reverberant Speech in Human Auditory Cortex",
-    journal = "bioRxiv",
-    pages = "229153",
-    year = "2017",
-    publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/10.1101/229153v1.abstract"
-}
-
-@article{matchin2019temporal,
-    author = "Matchin, William and Brodbeck, Christian and Hammerly, Christopher and Lau, Ellen",
-    title = "The temporal dynamics of structure and content in sentence comprehension: Evidence from fMRI-constrained MEG",
-    journal = "Human brain mapping",
-    volume = "40",
-    number = "2",
-    pages = "663--678",
-    year = "2019",
-    publisher = "Wiley Online Library",
-    url = "https://onlinelibrary.wiley.com/doi/abs/10.1002/hbm.24403"
+    url = "https://search.proquest.com/openview/3eac63204ea3455c96e64a21bd0d5d94/1?pq-origsite=gscholar\&cbl=18750"
 }
