DOC:  update publications
Use SerpAPI

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -218,7 +218,7 @@
     url = "https://www.ingentaconnect.com/content/dav/aaua/2018/00000104/00000005/art00013"
 }
 
-@article{HARTMANN2019116185,
+@article{hartmann2019auditory,
     author = "Hartmann, Thomas and Weisz, Nathan",
     title = "Auditory cortical generators of the Frequency Following Response are modulated by intermodal attention",
     journal = "NeuroImage",
@@ -292,13 +292,13 @@
     url = "https://www.sciencedirect.com/science/article/pii/S002839321930274X"
 }
 
-@article{gillis2021hearing_2,
+@article{gillis2021hearing,
     author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom and Gillis, Marlies and Francart, Tom",
     title = "Hearing loss is associated with delayed neural responses to continuous speech Abbreviated title: Hearing loss delays neural responses to speech: KU Leuven",
     journal = "bioRxiv",
     volume = "3000",
     year = "2021",
-    url = "https://www.biorxiv.org/content/10.1101/2021.01.21.427550v2.abstract"
+    doi = "10.1101/2021.01.21.427550v2"
 }
 
 @article{verschueren2021effect,
@@ -342,17 +342,18 @@
     pages = "1586--1597",
     year = "2020",
     publisher = "LWW",
-    url = "https://journals.lww.com/ear-hearing/fulltext/2020/11000/the\\_effect\\_of\\_stimulus\\_choice\\_on\\_an\\_eeg\\_based.16.aspx"
+    url = "https://journals.lww.com/ear-hearing/fulltext/2020/11000/the_effect_of_stimulus_choice_on_an_eeg_based.16.aspx"
 }
 
-@article{dirani2018lexical_a,
+@article{dirani2018lexical,
     author = {Dirani, Julien and Pylkk{\"a}nen, Liina},
     title = "Lexical Access in Comprehension vs. Production: Spatiotemporal Localization of Semantic Facilitation and Interference",
     journal = "bioRxiv",
     pages = "449157",
     year = "2018",
     publisher = "Cold Spring Harbor Laboratory",
-    url = "https://www.biorxiv.org/content/10.1101/449157v2.abstract"
+    doi = "10.1101/449157v2",
+    google_result_id = "JWQWxEZl-JEJ"
 }
 
 @article{tulling2021neural,
@@ -405,4 +406,85 @@
     year = "2021",
     publisher = "Cold Spring Harbor Laboratory",
     url = "https://www.biorxiv.org/content/10.1101/2021.01.31.429030v3.abstract"
+}
+
+@article{brodbeck2021eelbrain,
+    author = "Brodbeck, Christian and Das, Proloy and Kulasingham, Joshua P and Bhattasali, Shohini and Gaston, Phoebe and Resnik, Philip and Simon, Jonathan Z",
+    title = "Eelbrain: A Python toolkit for time-continuous analysis with temporal response functions",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2021.08.01.454687"
+}
+
+@article{wray2022early,
+    author = "Wray, Samantha and Stockall, Linnaea and Marantz, Alec",
+    title = "Early Form-Based Morphological Decomposition in Tagalog: {MEG} Evidence from Reduplication, Infixation, and Circumfixation",
+    journal = "Neurobiology of Language",
+    volume = "3",
+    number = "2",
+    pages = "235--255",
+    year = "2022",
+    publisher = "MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info\textasciitilde",
+    url = "https://direct.mit.edu/nol/article-abstract/3/2/235/108565"
+}
+
+@article{kulasingham2022algorithms,
+    author = "Kulasingham, Joshua P and Simon, Jonathan Z",
+    title = "Algorithms for Estimating Time-Locked Neural Response Components in Cortical Processing of Continuous Speech",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.01.18.476815"
+}
+
+@article{brodbeck2021cortical,
+    author = "Brodbeck, Christian and Simon, Jonathan Z",
+    title = "Cortical tracking of voice pitch in the presence of multiple speakers depends on selective attention",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2021.12.03.471122"
+}
+
+@phdthesis{anowar2020python,
+    author = "Anowar, Md Hasan",
+    title = "A Python-based Brain-Computer Interface Package for Neural Data Analysis",
+    year = "2020",
+    school = "The University of Texas Rio Grande Valley",
+    url = "https://search.proquest.com/openview/671784502734dbd4074d0b4f97d26a97/1?pq-origsite=gscholar\&cbl=18750\&diss=y"
+}
+
+@article{endevelt2021maternal,
+    author = "Endevelt-Shapira, Yaara and Djalovski, Amir and Dumas, Guillaume and Feldman, Ruth",
+    title = "Maternal chemosignals enhance infant-adult brain-to-brain synchrony",
+    journal = "Science Advances",
+    volume = "7",
+    number = "50",
+    pages = "eabg6867",
+    year = "2021",
+    publisher = "American Association for the Advancement of Science",
+    url = "https://www.science.org/doi/abs/10.1126/sciadv.abg6867"
+}
+
+@article{verschueren2022speech,
+    author = "Verschueren, Eline and Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom",
+    title = "Speech understanding oppositely affects acoustic and linguistic neural tracking in a speech rate manipulation paradigm",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.02.04.479105",
+    google_result_id = "zE9jBEJ552sJ"
+}
+
+@article{phillips2021composition,
+    author = {Phillips, Sarah F and Pylkk{\"a}nen, Liina},
+    title = "Composition within and between Languages in the Bilingual Mind: {MEG} Evidence from Korean/English Bilinguals",
+    journal = "Eneuro",
+    volume = "8",
+    number = "6",
+    year = "2021",
+    publisher = "Society for Neuroscience",
+    url = "https://www.ncbi.nlm.nih.gov/pmc/articles/pmc8570682/",
+    google_result_id = "cVICkj-gyZoJ"
 }
