--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -293,12 +293,12 @@
 }
 
 @article{gillis2021hearing,
-    author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom and Gillis, Marlies and Francart, Tom",
-    title = "Hearing loss is associated with delayed neural responses to continuous speech Abbreviated title: Hearing loss delays neural responses to speech: KU Leuven",
+    author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom",
+    title = "Hearing loss is associated with delayed neural responses to continuous speech",
     journal = "bioRxiv",
     volume = "3000",
     year = "2021",
-    doi = "10.1101/2021.01.21.427550v2"
+    doi = "10.1101/2021.01.21.427550"
 }
 
 @article{verschueren2021effect,
@@ -487,4 +487,14 @@
     publisher = "Society for Neuroscience",
     url = "https://www.ncbi.nlm.nih.gov/pmc/articles/pmc8570682/",
     google_result_id = "cVICkj-gyZoJ"
+}
+
+@article{gaston2021auditory,
+    author = "Gaston, Phoebe and Brodbeck, Christian and Phillips, Colin and Lau, Ellen",
+    title = "Auditory word comprehension is less incremental in isolated words",
+    journal = "bioRxiv",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2021.09.09.459631",
+    google_result_id = "_gN4SE_MSaIJ"
 }
