DOC:  Update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -498,3 +498,153 @@
     doi = "10.1101/2021.09.09.459631",
     google_result_id = "_gN4SE_MSaIJ"
 }
+
+@article{parrish2022conceptual,
+    author = {Parrish, Alicia and Pylkk{\"a}nen, Liina},
+    title = "Conceptual combination in the LATL with and without syntactic composition",
+    journal = "Neurobiology of Language",
+    volume = "3",
+    number = "1",
+    pages = "46--66",
+    year = "2022",
+    publisher = "MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info\textasciitilde",
+    url = "https://direct.mit.edu/nol/article-abstract/3/1/46/102654",
+    google_result_id = "mZfd-nV7axwJ"
+}
+
+@phdthesis{williams2018representing,
+    author = "Williams, Adina",
+    title = "Representing relationality: {MEG} studies on argument structure",
+    year = "2018",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/3eac63204ea3455c96e64a21bd0d5d94/1?pq-origsite=gscholar\&cbl=18750",
+    google_result_id = "uQ7X1c4kHgwJ"
+}
+
+@phdthesis{blanco2020towards,
+    author = "Blanco-Elorrieta, Esti",
+    title = "Towards an ecologically valid neurobiology of bilingualism",
+    year = "2020",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/f79d3946e65b72be4d17924229661815/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
+    google_result_id = "t5g817um_mQJ"
+}
+
+@article{bieber2022examining,
+    author = "Bieber, Rebecca E and Brodbeck, Christian and Anderson, Samira",
+    title = "Examining the context benefit in older adults: A combined behavioral-electrophysiologic word identification study",
+    journal = "Neuropsychologia",
+    pages = "108224",
+    year = "2022",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0028393222000835",
+    google_result_id = "DZuPJ-wyR50J"
+}
+
+@article{flick2021letters,
+    author = {Flick, Graham and Abdullah, Osama and Pylkk{\"a}nen, Liina},
+    title = "From letters to composed concepts: A magnetoencephalography study of reading",
+    journal = "Human brain mapping",
+    volume = "42",
+    number = "15",
+    pages = "5130--5153",
+    year = "2021",
+    publisher = "Wiley Online Library",
+    url = "https://onlinelibrary.wiley.com/doi/abs/10.1002/hbm.25608",
+    google_result_id = "zDKzLG31cSsJ"
+}
+
+@phdthesis{pifer2019investigation,
+    author = "Pifer, Madeline",
+    title = "An Investigation of Neural Mechanisms Underlying Verb Morphology Deficits in Aphasia",
+    year = "2019",
+    school = "University of Maryland, College Park",
+    url = "https://search.proquest.com/openview/1f2ef0a91eef05c8bab98ad8d5551e7f/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
+    google_result_id = "QsVw5nMULv0J"
+}
+
+@article{li2021cortical,
+    author = {Li, Jixing and Wang, Shaonan and Luh, Wen-Ming and Pylkk{\"a}nen, Liina and Yang, Yiming and Hale, John},
+    title = "Cortical processing of reference in language revealed by computational models",
+    journal = "bioRxiv",
+    pages = "2020--11",
+    year = "2021",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2020.11.24.396598",
+    google_result_id = "HYaSG1VfXccJ"
+}
+
+@article{dirani2020lexical,
+    author = {Dirani, Julien and Pylkk{\"a}nen, Liina},
+    title = "Lexical Access in Naming and Reading: Spatiotemporal Localization of Semantic Facilitation and Interference Using {MEG}",
+    journal = "Neurobiology of Language",
+    volume = "1",
+    number = "2",
+    pages = "185--207",
+    year = "2020",
+    publisher = "MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info\textasciitilde",
+    url = "https://direct.mit.edu/nol/article-abstract/1/2/185/95871",
+    google_result_id = "Q8F2Y_cEKgEJ"
+}
+
+@phdthesis{zhang2016composing,
+    author = "Zhang, Linmin",
+    title = "Composing conceptual and logical information: Semantic processing in left anterior temporal cortex",
+    year = "2016",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/913f5f104900afba2a426f42998ae54e/1?pq-origsite=gscholar\&cbl=18750",
+    google_result_id = "Ro4P43VAJI4J"
+}
+
+@article{stockall2019prefix,
+    author = "Stockall, Linnaea and Manouilidou, Christina and Gwilliams, Laura and Neophytou, Kyriaki and Marantz, Alec",
+    title = "Prefix stripping re-re-revisited: {MEG} investigations of morphological decomposition and recomposition",
+    journal = "Frontiers in psychology",
+    pages = "1964",
+    year = "2019",
+    publisher = "Frontiers",
+    url = "https://www.frontiersin.org/articles/10.3389/fpsyg.2019.01964/full",
+    google_result_id = "6HkSecOndzMJ"
+}
+
+@article{gaston2021memory,
+    author = "Gaston, Phoebe and Stockall, Linnaea and VanWagenen, Sarah and Marantz, Alec",
+    title = "Memory for affixes in a long-lag priming paradigm",
+    journal = "Glossa: a journal of general linguistics",
+    volume = "6",
+    number = "1",
+    year = "2021",
+    publisher = "Open Library of Humanities",
+    url = "https://www.glossa-journal.org/article/id/5735/",
+    google_result_id = "-cJ_wI_xKTkJ"
+}
+
+@article{herrera2021cortical,
+    author = "Herrera, Christian and Whittle, Nicole and Leek, Marjorie R and Brodbeck, Christian and Lee, Grace and Barcenas, Caleb and Barnes, Samuel and Holshouser, Barbara and Alex, C Yi and Venezia, Jonathan",
+    title = "Cortical Networks for Recognition of Speech with Simultaneous Talkers",
+    year = "2021",
+    publisher = "PsyArXiv",
+    url = "https://psyarxiv.com/vea5y/",
+    google_result_id = "xgoUWQYzdnoJ"
+}
+
+@article{das2020neuro,
+    author = "Das, Proloy and Brodbeck, Christian and Simon, Jonathan Z and Babadi, Behtash",
+    title = "Neuro-current response functions: A unified approach to {MEG} source analysis under the continuous stimuli paradigm",
+    journal = "Neuroimage",
+    volume = "211",
+    pages = "116528",
+    year = "2020",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S105381192030015X",
+    google_result_id = "PWh77B7XZdsJ"
+}
+
+@phdthesis{puvvada2017cortical,
+    author = "Puvvada, Venkata Naga Krishna Chaitanya",
+    title = "Cortical Representation of Speech in Complex Auditory Environments and Applications",
+    year = "2017",
+    school = "University of Maryland, College Park",
+    url = "https://search.proquest.com/openview/2f4e278fe66fd86b3f2f83c9af9cc8d5/1?pq-origsite=gscholar\&cbl=18750",
+    google_result_id = "3q6IcMq05TgJ"
+}
