--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -501,7 +501,7 @@
 
 @article{parrish2022conceptual,
     author = {Parrish, Alicia and Pylkk{\"a}nen, Liina},
-    title = "Conceptual combination in the LATL with and without syntactic composition",
+    title = "Conceptual combination in the {LATL} with and without syntactic composition",
     journal = "Neurobiology of Language",
     volume = "3",
     number = "1",
@@ -622,6 +622,7 @@
 @article{herrera2021cortical,
     author = "Herrera, Christian and Whittle, Nicole and Leek, Marjorie R and Brodbeck, Christian and Lee, Grace and Barcenas, Caleb and Barnes, Samuel and Holshouser, Barbara and Alex, C Yi and Venezia, Jonathan",
     title = "Cortical Networks for Recognition of Speech with Simultaneous Talkers",
+    journal = "{PsyArXiv}",
     year = "2021",
     publisher = "PsyArXiv",
     url = "https://psyarxiv.com/vea5y/",
@@ -647,4 +648,16 @@
     school = "University of Maryland, College Park",
     url = "https://search.proquest.com/openview/2f4e278fe66fd86b3f2f83c9af9cc8d5/1?pq-origsite=gscholar\&cbl=18750",
     google_result_id = "3q6IcMq05TgJ"
+}
+
+@article{brodbeck2022parallel,
+    title={Parallel processing in speech perception with local and global representations of linguistic context},
+    author={Brodbeck, Christian and Bhattasali, Shohini and Heredia, Aura AL Cruz and Resnik, Philip and Simon, Jonathan Z and Lau, Ellen},
+    journal={Elife},
+    volume={11},
+    pages={e72056},
+    year={2022},
+    publisher={eLife Sciences Publications Limited},
+    doi = "10.7554/eLife.72056",
+    google_result_id = "7_12qdwe3r4J"
 }
