DOC publications:  update

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -292,15 +292,6 @@
     url = "https://www.sciencedirect.com/science/article/pii/S002839321930274X"
 }
 
-@article{gillis2021hearing,
-    author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom",
-    title = "Hearing loss is associated with delayed neural responses to continuous speech",
-    journal = "bioRxiv",
-    volume = "3000",
-    year = "2021",
-    doi = "10.1101/2021.01.21.427550"
-}
-
 @article{verschueren2021effect,
     author = "Verschueren, Eline and Vanthornhout, Jonas and Francart, Tom",
     title = "The effect of stimulus intensity on neural envelope tracking",
@@ -651,13 +642,46 @@
 }
 
 @article{brodbeck2022parallel,
-    title={Parallel processing in speech perception with local and global representations of linguistic context},
-    author={Brodbeck, Christian and Bhattasali, Shohini and Heredia, Aura AL Cruz and Resnik, Philip and Simon, Jonathan Z and Lau, Ellen},
-    journal={Elife},
-    volume={11},
-    pages={e72056},
-    year={2022},
-    publisher={eLife Sciences Publications Limited},
+    author = "Brodbeck, Christian and Bhattasali, Shohini and Heredia, Aura AL Cruz and Resnik, Philip and Simon, Jonathan Z and Lau, Ellen",
+    title = "Parallel processing in speech perception with local and global representations of linguistic context",
+    journal = "Elife",
+    volume = "11",
+    pages = "e72056",
+    year = "2022",
+    publisher = "eLife Sciences Publications Limited",
     doi = "10.7554/eLife.72056",
     google_result_id = "7_12qdwe3r4J"
+}
+
+@article{gillis2022hearing,
+    author = "Gillis, Marlies and Decruy, Lien and Vanthornhout, Jonas and Francart, Tom",
+    title = "Hearing loss is associated with delayed neural responses to continuous speech",
+    journal = "European Journal of Neuroscience",
+    volume = "55",
+    number = "6",
+    pages = "1671--1690",
+    year = "2022",
+    publisher = "Wiley Online Library",
+    url = "https://onlinelibrary.wiley.com/doi/abs/10.1111/ejn.15644",
+    google_result_id = "zqmQw-zIIykJ"
+}
+
+@article{schwartz2022technologically,
+    author = "Schwartz, Linoy and Levy, Jonathan and Endevelt-Shapira, Yaara and Djalovski, Amir and Hayut, Olga and Dumas, Guillaume and Feldman, Ruth",
+    title = "Technologically-Assisted Communication Attenuates Inter-Brain Synchrony",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.06.06.494185",
+    google_result_id = "c_mz6x1eGDgJ"
+}
+
+@article{schubert2022individual,
+    author = "Schubert, Juliane and Schmidt, Fabian and Gehmacher, Quirin and Bresgen, Annika and Weisz, Nathan",
+    title = "Individual prediction tendencies facilitate cortical speech tracking",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.04.22.489224",
+    google_result_id = "zyzRBRZ6n7UJ"
 }
