--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -685,3 +685,33 @@
     doi = "10.1101/2022.04.22.489224",
     google_result_id = "zyzRBRZ6n7UJ"
 }
+
+@article{tezcan2022tradeoff,
+    author = "Tezcan, Filiz and Weissbart, Hugo and Martin, Andrea E",
+    title = "A tradeoff between acoustic and linguistic feature encoding in spoken language comprehension",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.08.17.504234",
+    google_result_id = "DydMiMelnaYJ"
+}
+
+@article{gillis2022linguistic,
+    author = "Gillis, Marlies and Kries, Jill and Vandermosten, Maaike and Francart, Tom",
+    title = "Linguistic speech processing decreases with advancing age",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.07.29.501978",
+    google_result_id = "Tnb_P_A4WiAJ"
+}
+
+@article{de2022beyond,
+    author = "De Clercq, Pieter and Vanthornhout, Jonas and Vandermosten, Maaike and Francart, Tom",
+    title = "Beyond Linear Neural Envelope Tracking: A Mutual Information Approach",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.08.11.503600",
+    google_result_id = "uX8c_LpxGisJ"
+}
