DOC:   update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -715,3 +715,12 @@
     doi = "10.1101/2022.08.11.503600",
     google_result_id = "uX8c_LpxGisJ"
 }
+
+@phdthesis{tulling2022neural,
+    author = "Tulling, Maxime Alexandra",
+    title = "Neural and developmental bases of processing language outside the here-and-now",
+    year = "2022",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/bae98a7cd0e7c6bbb436ed364ed00e8e/1.pdf?pq-origsite=gscholar\&cbl=18750\&diss=y",
+    google_result_id = "sn9W_cUDRqQJ"
+}
