--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -724,3 +724,43 @@
     url = "https://search.proquest.com/openview/bae98a7cd0e7c6bbb436ed364ed00e8e/1.pdf?pq-origsite=gscholar\&cbl=18750\&diss=y",
     google_result_id = "sn9W_cUDRqQJ"
 }
+
+@article{gillis2022neural,
+    author = "Gillis, Marlies and Van Canneyt, Jana and Francart, Tom and Vanthornhout, Jonas",
+    title = "Neural tracking as a diagnostic tool to assess the auditory pathway",
+    journal = "Hearing Research",
+    pages = "108607",
+    year = "2022",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0378595522001757",
+    google_result_id = "5m5W40xRnIQJ"
+}
+
+@article{zuanazzi2022tracking,
+    author = "Zuanazzi, Arianna and Ripolles, Pablo and Lin, Wy Ming and Gwilliams, Laura and King, Jean-Remi and Poeppel, David",
+    title = "Tracking the online construction of linguistic meaning through negation",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.10.14.512299",
+    google_result_id = "jQmGaEK_518J"
+}
+
+@article{xie2022cortical,
+    author = "Xie, Zilong and Brodbeck, Christian and Chandresekaran, Bharath",
+    title = "Cortical tracking of continuous speech under bimodal divided attention",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.10.29.514344",
+    google_result_id = "lC-KuCZxkksJ"
+}
+
+@article{matarmodels,
+    author = "Matar, Suhail and Marantz, Alec",
+    title = {Models of processing complex spoken words: the na{\"\i}ve, the passive, and the predictive},
+    journal = "Proceedings of the Conference on Cognitive Computational Neuroscience",
+    year = "2022",
+    url = "https://2022.ccneuro.org/proceedings/0000331.pdf",
+    google_result_id = "mBZCoKR6Va4J"
+}
