DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -764,3 +764,23 @@
     url = "https://2022.ccneuro.org/proceedings/0000331.pdf",
     google_result_id = "mBZCoKR6Va4J"
 }
+
+@article{gillis2022heard,
+    author = "Gillis, Marlies and Vanthornhout, Jonas and Francart, Tom",
+    title = "Heard or understood? Neural tracking of language features in a comprehensible story, an incomprehensible story and a word list",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.11.22.517477",
+    google_result_id = "7w3_G4qWqWUJ"
+}
+
+@article{schmidt2022age,
+    author = "Schmidt, Fabian and Danboeck, Sarah K and Trinka, Eugen and Demarchi, Gianpaolo and Weisz, Nathan",
+    title = "Age-related changes in'cortical'1/f dynamics are explained by cardiac activity",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.11.07.515423",
+    google_result_id = "ERvT26o8AlUJ"
+}
