DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -676,16 +676,6 @@
     google_result_id = "c_mz6x1eGDgJ"
 }
 
-@article{schubert2022individual,
-    author = "Schubert, Juliane and Schmidt, Fabian and Gehmacher, Quirin and Bresgen, Annika and Weisz, Nathan",
-    title = "Individual prediction tendencies facilitate cortical speech tracking",
-    journal = "bioRxiv",
-    year = "2022",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2022.04.22.489224",
-    google_result_id = "zyzRBRZ6n7UJ"
-}
-
 @article{tezcan2022tradeoff,
     author = "Tezcan, Filiz and Weissbart, Hugo and Martin, Andrea E",
     title = "A tradeoff between acoustic and linguistic feature encoding in spoken language comprehension",
@@ -694,16 +684,6 @@
     publisher = "Cold Spring Harbor Laboratory",
     doi = "10.1101/2022.08.17.504234",
     google_result_id = "DydMiMelnaYJ"
-}
-
-@article{gillis2022linguistic,
-    author = "Gillis, Marlies and Kries, Jill and Vandermosten, Maaike and Francart, Tom",
-    title = "Linguistic speech processing decreases with advancing age",
-    journal = "bioRxiv",
-    year = "2022",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2022.07.29.501978",
-    google_result_id = "Tnb_P_A4WiAJ"
 }
 
 @article{de2022beyond,
@@ -783,4 +763,51 @@
     publisher = "Cold Spring Harbor Laboratory",
     doi = "10.1101/2022.11.07.515423",
     google_result_id = "ERvT26o8AlUJ"
+}
+
+@phdthesis{EcBw_83IeQAJ,
+    author = "Parrish, Alicia",
+    title = "The Interaction Between Conceptual Combination and Linguistic Structure",
+    year = "2022",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/e6f65a934e536643246e975828a3f2fb/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
+    google_result_id = "EcBw_83IeQAJ"
+}
+
+@article{Q_15uAoI904J,
+    author = "Gillis, Marlies and Kries, Jill and Vandermosten, Maaike and Francart, Tom",
+    title = "Neural tracking of linguistic and acoustic speech representations decreases with advancing age",
+    journal = "NeuroImage",
+    pages = "119841",
+    year = "2022",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S1053811922009624",
+    google_result_id = "Q_15uAoI904J"
+}
+
+@article{SDGO-jyIalsJ,
+    author = "Parrish, Alicia and Rodriguez, Amilleah and Pylkkanen, Liina",
+    title = "Non-Local Conceptual Combination",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.12.11.519989",
+    google_result_id = "SDGO-jyIalsJ"
+}
+
+@phdthesis{cg12tTakALsJ,
+    author = "Kulasingham, Joshua Pranjeevan",
+    title = "Time-Locked Cortical Processing of Speech in Complex Environments",
+    year = "2021",
+    url = "https://drum.lib.umd.edu/handle/1903/28410",
+    google_result_id = "cg12tTakALsJ"
+}
+
+@article{qup-7vP0kAcJ,
+    author = "Schubert, Juliane and Schmidt, Fabian and Gehmacher, Quirin and Bresgen, Annika and Weisz, Nathan",
+    title = "Cortical speech tracking is related to individual prediction tendencies",
+    journal = "Cerebral Cortex",
+    year = "2023",
+    url = "https://academic.oup.com/cercor/advance-article-abstract/doi/10.1093/cercor/bhac528/6975346",
+    google_result_id = "qup-7vP0kAcJ"
 }
