--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -480,16 +480,6 @@
     google_result_id = "cVICkj-gyZoJ"
 }
 
-@article{gaston2021auditory,
-    author = "Gaston, Phoebe and Brodbeck, Christian and Phillips, Colin and Lau, Ellen",
-    title = "Auditory word comprehension is less incremental in isolated words",
-    journal = "bioRxiv",
-    year = "2021",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2021.09.09.459631",
-    google_result_id = "_gN4SE_MSaIJ"
-}
-
 @article{parrish2022conceptual,
     author = {Parrish, Alicia and Pylkk{\"a}nen, Liina},
     title = "Conceptual combination in the {LATL} with and without syntactic composition",
@@ -810,4 +800,38 @@
     year = "2023",
     url = "https://academic.oup.com/cercor/advance-article-abstract/doi/10.1093/cercor/bhac528/6975346",
     google_result_id = "qup-7vP0kAcJ"
+}
+
+@article{zyzRBRZ6n7UJ,
+    author = "Schubert, Juliane and Schmidt, Fabian and Gehmacher, Quirin and Bresgen, Annika and Weisz, Nathan",
+    title = "Individual prediction tendencies facilitate cortical speech tracking",
+    journal = "bioRxiv",
+    year = "2022",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2022.04.22.489224",
+    google_result_id = "zyzRBRZ6n7UJ"
+}
+
+@article{h_6AqLgvlkAJ,
+    author = "Gehmacher, Quirin and Schubert, Juliane and Schmidt, Fabian and Hartmann, Thomas and Reisinger, Patrick and Roesch, Sebastian and Schwarz, Konrad and Popov, Tzvetan and Chait, Maria and Weisz, Nathan",
+    title = "Eye movements track prioritized auditory features in selective attention to natural speech",
+    journal = "bioRxiv",
+    pages = "2023--01",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.01.23.525171",
+    google_result_id = "h_6AqLgvlkAJ"
+}
+
+@article{p2rj0jGLdrYJ,
+    author = "Gaston, Phoebe and Brodbeck, Christian and Phillips, Colin and Lau, Ellen",
+    title = "Auditory word comprehension is less incremental in isolated words",
+    journal = "Neurobiology of Language",
+    volume = "4",
+    number = "1",
+    pages = "29--52",
+    year = "2023",
+    publisher = "MIT Press",
+    url = "https://direct.mit.edu/nol/article-abstract/4/1/29/113251",
+    google_result_id = "p2rj0jGLdrYJ"
 }
