EXA:  update (don't need print() anymore)
DOC


EXA update

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -789,6 +789,7 @@
     author = "Kulasingham, Joshua Pranjeevan",
     title = "Time-Locked Cortical Processing of Speech in Complex Environments",
     year = "2021",
+    school = "University of Maryland, College Park",
     url = "https://drum.lib.umd.edu/handle/1903/28410",
     google_result_id = "cg12tTakALsJ"
 }
